# container_mqtt_home_assistant

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  compose.yml  create-tag.sh  cross-build.nix  flake.nix  rustfmt.toml  shell.nix
.forgejo/workflows/: .secrets.example  build.yaml
cmha/: .dockerignore  Cargo.toml
cmha/debug/containers/mosquitto/: passwd_file
cmha/src/: args.rs  container_device.rs  device_manager.rs  healthcheck.rs  helpers.rs  logger.rs  macros.rs  main.rs  sample_device.rs  shared_memory.rs  update_engine.rs
cmha/src/devices/: button.rs  device.rs  devices.rs  light.rs  mod.rs  number.rs  sensor.rs  switch.rs  text.rs
cmha_proc_macros/: Cargo.toml
cmha_proc_macros/tests/: macro_test.rs
docker_status_mqtt/: .dockerignore  Cargo.toml  Dockerfile  compose.yaml
docker_status_mqtt/debug/containers/ha/config/: configuration.yaml
docker_status_mqtt/debug/containers/mosquitto/config/: mosquitto.conf
docker_status_mqtt/src/: args.rs  cancellation_token.rs  datetime.rs  device_manager.rs  docker.rs  docker_device.rs  ha_devices.rs  helpers.rs  logger.rs  macros.rs  main.rs  observer.rs  sample_device.rs  sleep.rs  update_engine.rs
docker_status_mqtt/src/devices/: button.rs  device.rs  devices.rs  light.rs  mod.rs  number.rs  sensor.rs  switch.rs  test_helpers.rs  test_module.rs  text.rs
docker_status_mqtt_proc_macros/: Cargo.toml
docker_status_mqtt_proc_macros/src/: lib.rs
docker_status_mqtt_proc_macros/tests/: macro_test.rs
