[workspace]
resolver = "3"
members = ["docker_status_mqtt", "docker_status_mqtt_proc_macros"]

# [workspace.lints.rust]
# unused_qualifications = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "deny"
panic = "deny"
# pedantic = { level = "warn", priority = -1 }
panic_in_result_fn = "warn"
