[workspace]
resolver = "3"
members = ["docker_status_mqtt", "docker_status_mqtt_proc_macros"]

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
