[workspace]
resolver = "3"
members = ["cmha", "cmha_proc_macros"]

[workspace.lints.rust]
unused_qualifications = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
wildcard_imports = "allow"
ignored_unit_patterns = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
panic_in_result_fn = "deny"
