[package]
name = "cmha"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lints]
workspace = true

[dependencies]
cmha_proc_macros = { path = "../cmha_proc_macros" }
bollard = "0.19.3"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.28", features = ["kv"] }
rand = "0.9.2"
rumqttc = "0.25"
rustls = "0.23.32"
rustls-platform-verifier = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
guls = { version = "0.1.6", package = "slug" }
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
chrono-humanize = "0.2.3"
flexi_logger = { version = "0.31.7", features = ["kv", "async"] }
futures = "0.3.31"
clap = { version = "4.5.49", features = ["derive", "env"] }
const_format = { version = "0.2.35", features = ["rust_1_83", "fmt"] }
hashbrown = "0.16.0"
foldhash = "0.2.0"
rustix = { version = "1.1.2", features = ["system"] }
async-stream = "0.3.6"
rust_decimal = "1.39.0"
bitflags = "2.10.0"
raw_sync = "0.1.5"
shared_memory = "0.12.4"

[dev-dependencies]
ctor = "0.6.0"
mockall = "0.14.0"
mockall_double = "0.3.1"
pretty_assertions = "1.4.1"
serial_test = "3.2.0"
