[package]
name = "cmha"
version = "0.1.1"
edition = "2024"
license = "MIT"

[features]
default = ["proptests"] # runs proptests with all tests, if build gets slow, remove it from default feature and run with `cargo nextest run --all-features prop_test::`
proptests = []

[lints]
workspace = true

[dependencies]
cmha_proc_macros = { path = "../cmha_proc_macros" }
bollard = "0.19.4"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.33", features = ["kv"] }
rand = "0.10.2"
rumqttc = "0.25"
rustls = "0.23.42"
rustls-platform-verifier = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
guls = { version = "0.1.6", package = "slug" }
thiserror = "2.0.19"
tokio = { version = "1.53", features = ["full"] }
tokio-rustls = "0.26.4"
async-trait = "0.1.91"
enum_dispatch = "0.3.13"
chrono-humanize = "0.2.3"
flexi_logger = { version = "0.31.9", features = ["kv", "async"] }
futures = "0.3.33"
clap = { version = "4.6.2", features = ["derive", "env"] }
const_format = { version = "0.2.36", features = ["rust_1_83", "fmt"] }
hashbrown = "0.17.1"
foldhash = "0.2.0"
rustix = { version = "1.1.4", features = ["system"] }
async-stream = "0.3.6"
rust_decimal = "1.42.1"
bitflags = "2.13.1"
raw_sync = "0.1.5"
shared_memory = "0.12.4"
clap-verbosity-flag = "3.0.4"

[dev-dependencies]
ctor = "1.0.9"
mockall = "0.15.0"
mockall_double = "0.3.1"
pretty_assertions = "1.4.1"
proptest = "1.11.0"
serial_test = "3.5.0"
