[package]
name = "docker_status_mqtt"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
docker_status_mqtt_proc_macros = { path = "../docker_status_mqtt_proc_macros" }
bollard = "0.19.3"
chrono = { version = "0.4", features = ["serde"] }
log = { version = "0.4.28", features = ["kv"] }
rand = "0.9.2"
rumqttc = "0.25"
rustls = "0.23.32"
rustls-platform-verifier = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1.6"
thiserror = "2.0.17"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
enum_dispatch = "0.3.13"
chrono-humanize = "0.2.3"
flexi_logger = { version = "0.31.7", features = ["kv", "async"] }
futures = "0.3.31"

[dev-dependencies]
pretty_assertions = "1.4.1"

